force-app/main/default/objects/kgtudent__c/kgtudent__c.object-meta.xml
<CustomObject>
    <label>kgstudent</label>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>kgstudents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>