force-app/main/default/objects/kgtudent__c/fields/Apasi__c.field-meta.xml
<CustomField>
    <fullName>Apasi__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Apasi</label>
    <referenceTo>KGparent__c</referenceTo>
    <relationshipLabel>kgstudents (Apasi)</relationshipLabel>
    <relationshipName>kgstudents1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>