force-app/main/default/objects/kgtudent__c/fields/Atasi__c.field-meta.xml
<CustomField>
    <fullName>Atasi__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Atasi</label>
    <referenceTo>KGparent__c</referenceTo>
    <relationshipLabel>kgstudents</relationshipLabel>
    <relationshipName>kgstudents</relationshipName>
    <type>Lookup</type>
</CustomField>