force-app/main/default/objects/kgtudent__c/fields/College_Graduation__c.field-meta.xml
<CustomField>
    <fullName>College_Graduation__c</fullName>
    <label>College Graduation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>