force-app/main/default/objects/kgtudent__c/fields/Father_Age__c.field-meta.xml
<CustomField>
    <fullName>Father_Age__c</fullName>
    <formula>YEAR(Today()) - Atasi__r.Birth_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Father Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>