force-app/main/default/objects/kgtudent__c/fields/Father_phone__c.field-meta.xml
<CustomField>
    <fullName>Father_phone__c</fullName>
    <formula>Atasi__r.Phone__c</formula>
    <label>Father phone</label>
    <type>Text</type>
</CustomField>