force-app/main/default/objects/kgtudent__c/fields/HS_Grad_Year__c.field-meta.xml
<CustomField>
    <fullName>HS_Grad_Year__c</fullName>
    <label>HS Grad Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>