force-app/main/default/objects/kgtudent__c/fields/Mother_Age__c.field-meta.xml
<CustomField>
    <fullName>Mother_Age__c</fullName>
    <formula>YEAR(Today()) - Apasi__r.Birth_Year__c</formula>
    <label>Mother Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>