force-app/main/default/objects/kgtudent__c/fields/Mother_s_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Phone__c</fullName>
    <formula>Apasi__r.Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mother&apos;s Phone</label>
    <type>Text</type>
</CustomField>