force-app/main/default/objects/kgtudent__c/fields/US_Address__c.field-meta.xml
<CustomField>
    <fullName>US_Address__c</fullName>
    <label>US Address</label>
    <type>TextArea</type>
</CustomField>