force-app/main/default/objects/kgtudent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Phone__c</columns>
    <columns>College__c</columns>
    <columns>Major__c</columns>
    <columns>Apasi__c</columns>
    <columns>Atasi__c</columns>
    <columns>US_Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>